--- a/styles.css
+++ b/styles.css
@@ -4,11 +4,13 @@ body{
 }
 .div{
     background-color:white;
-    width:1000px;
     height:600px;
-    margin:75px 200px 75px 200px;
-    border-radius:15px;
+    width: 1000px; /* Adjust the width as needed */
+    margin-left: auto;
+    margin-right: auto;
+    margin-top:50px;
     
+    border-radius:15px;
     
 }
 .nav-bar{
