--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,11 @@ body{
 .div{
     background-color:white;
     height:600px;
-    margin:75px 200px 100px 200px;
+    width: 1000px; /* Adjust the width as needed */
+    margin-left: auto;
+    margin-right: auto;
+    margin-top:50px;
+    margin-bottom:20px;
     border-radius:15px;
     
     
@@ -131,4 +135,146 @@ body{
     cursor: pointer;
     color:transparent;
 }
+@media (max-width: 768px) {
+    
+    .div{
+        margin-top:auto;
+        margin-right:auto;
+        margin-bottom:100px;
+        margin-left:auto;
 
+        
+        
+    
+        
+    }
+    
+    .nav-bar {
+        text-align: center;
+    }
+
+     .heading, .home, .about, .skills, .contact {
+        width: 100%;
+    }
+
+    .heading {
+        border-right: none;
+        border-bottom: 1.5px solid rgb(229, 225, 225);
+    }
+
+    .inner-div, .inner-div2 {
+        width: 100%;
+    }
+
+    .button {
+        margin-top: 20px;
+        
+    }
+
+    .media {
+        margin-top: 20px;
+        
+    }
+    .inner-div2 {
+        width: 100%;
+        margin-top: 20px;
+        padding: 0 10px; 
+        box-sizing: border-box; 
+    }
+}
+.div2{
+    background-color:white;
+    height:600px;
+    width: 1000px; 
+    margin-left: auto;
+    margin-right: auto;
+    margin-top:100px;
+    
+    border-radius:15px;
+}
+.div3{
+    background-color:white;
+    height:800px;
+    width: 1000px; 
+    margin-left: auto;
+    margin-right: auto;
+    margin-top:10px;
+    
+    border-radius:15px;
+}
+.head-skills{
+    text-align:center;
+    padding-top:75px;
+    color:rgb(77, 77, 130);
+    font-size:50px;
+    padding-bottom:30px;
+}
+.subject{
+    display:flex;
+    padding-left:250px;
+}
+.python,.html,.css{
+    background-color:lightgrey;
+    color:black;
+    padding-left:50px;
+    padding-right:50px;
+    margin-left:10px;
+    margin-right:10px;
+    padding-top:15px;
+    padding-bottom:15px;
+    border-radius:5px;
+    margin-top:10px;
+    font-size:20px;
+}
+.sub1{
+    display:flex;
+    padding-left:250px;
+}
+.con{
+    text-align:center;
+    padding-top:75px;
+    color:rgb(77, 77, 130);
+    font-size:50px;
+      
+}
+.opp{
+    margin-top:0px;
+    text-align: center;
+    font-size: 25px;
+    padding-left:15px;
+    padding-right:15px;
+}
+.details{
+   
+    height:300px;
+    margin-left:50px;
+    margin-right:50px;
+}
+.names,.email,.message{
+    font-size:20px;
+    padding-left:15px;
+   
+}
+.input-name,.input-mail,.input-message{
+    border-radius:3px;
+    padding:10px 20px 10px 20px;
+    border:none;
+    background-color:lightgrey;
+    width:700px;
+    color:black;
+    margin-top:0px;
+    display:block;
+}
+.submit{
+    margin-top:50px;
+    background-color:blue;
+    border:none;
+    color:white;
+    padding:10px 30px 10px 30px;
+    font-size:20px;
+    border-radius:10px;
+}
+.submit:hover{
+    background-color:rgb(107, 107, 171);
+    
+}
